# employee_sale_project

./: README.md  db.sqlite3  directory_structure.py  manage.py  print_structure.py  pyproject.toml  requirements.txt
employee-sale-frontend/: .babelrc  Employeelist.js  package-lock.json  package.json
employee-sale-frontend/public/: index.html
employee-sale-frontend/src/: App.css  App.js  index.js
employee-sale-frontend/src/components/: EmployeeCard.css  EmployeeCard.js
employee_sale_project/: Dockerfile  asgi.py  settings.py  urls.py  wsgi.py
employees/: admin.py  models.py  urls.py  views.py
employees/migrations/: 0001_initial.py
employees/templates/employees/: home.html
staticfiles/: staticfiles.json
staticfiles/images/: index.080542adc343.html
templates/: index.html
