[tool.poetry]
name = "employee-sale-project"
version = "0.1.0"
description = ""
authors = ["Naveen Yadav <gnaveenyadav0606@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^23.0.0"
django = "^5.1.3"
djangorestframework = "^3.15.2"
waitress = "^3.0.2"
django-cors-headers = "^4.6.0"
mysqlclient = "^2.2.6"
pillow = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
